Fix NPE when closing a PR via webhook
Map.of() forbids null values, but returning {head: null} is how
SCMHeadEvent.heads() signals a REMOVED head. Replaced with
Collections.singletonMap which permits nulls. Also replaced the same
pattern in BranchHeadEvent.heads() for branch deletions.

Added pullRequestClosedRemovesJob end-to-end test which first waits for
the branch project to be marked Dead by the webhook, then verifies that
a subsequent re-index deletes it.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>